--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-name: UAE Financial Insights
-title: UAE Financial Insights
-description: UAE Financial Insights delivers expert analysis and in-depth perspectives on the UAE financial landscape. Stay informed with reliable insights from official sources.
+name: RTA Dubai Updates
+title: RTA Dubai Updates
+description: Your comprehensive guide to Dubai's RTA bus services. Find up-to-date schedules, fare information, and detailed route maps for seamless travel.
 logo: assets/images/idnlogos.png
 favicon: assets/images/techico.png
-url: 'https://thedubailife.github.io'
+url: 'https://rtadubaiblog.github.io'
 baseurl: ''
 google_analytics: ''
 include:
@@ -11,12 +11,12 @@ include:
 permalink: '/:title/'
 authors:
   uaefin:
-    name: UAE Finance
-    display_name: UAE Finance
-    email: thedubailife@gmail.com
+    name: RTA Dubai Info
+    display_name: RTA Dubai Info
+    email: rtadubai@gmail.com
     twitter: ''
     description: "So, you need any financial insights for Dubai expats?"
-    web: "https://uaefinance.github.io"
+    web: "https://rtadubaiblog.github.io"
     gravatar: 2c7d99fe281ecd3bcd65ab915bac6dd5
 plugins:
   - jekyll-paginate
