--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ authors:
     display_name: RTA Dubai Info
     email: rtadubai@gmail.com
     twitter: ''
-    description: "So, you need any financial insights for Dubai expats?"
+    description: "Your go-to source for all things RTA Dubai bus services. Providing accurate and up-to-date information for commuters."
     web: "https://rtadubaiblog.github.io"
     gravatar: 2c7d99fe281ecd3bcd65ab915bac6dd5
 plugins:
